mustache templates added and now it works with API info Delegate interface from generated code implemented Repository, Mapper and Service implemented IT WORKS FINE. THIS IS THE FIRST PROJECT WITH API FIRST APPROACH
